<resources>
    <string name="app_name">Polemy</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_pollen_plants">Pollen Plants in Victoria</string>
    <string name="menu_pollen_plants_desc">Top Pollen Spewing Plants</string>
    <string name="asthma_weed_heading">ASTHMA WEED</string>
    <string name="asthma_weed_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchangedIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry stIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry stIpsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry st.</string>
    <string name="bahia_grass_heading">BAHIA GRASS</string>
    <string name="bottle_brush_heading">BOTTLE BRUSH</string>
    <string name="canary_grass_heading">CANARY GRASS</string>
    <string name="couch_grass_heading">COUCH GRASS</string>
    <string name="english_oak_heading">ENGLISH OAK</string>
    <string name="johnson_grass_heading">JOHNSON GRASS</string>
    <string name="june_grass_heading">JUNE GRASS</string>
    <string name="olive_tree_heading">OLIVE TREE</string>
    <string name="orchard_grass_heading">ORCHARD GRASS</string>
    <string name="ragweed_heading">RAGWEED</string>
    <string name="rye_grass_heading">RYEGRASS</string>
    <string name="silver_birch_heading">SILVER BIRCH</string>
    <string name="timothy_grass_heading">TIMOTHY GRASS</string>
    <string name="white_pine_heading">WHITE CYPRUS PINE</string>
    <string name="menu_symptoms">Symptoms of Airborne Allergies and Asthma</string>
    <string name="menu_about">About</string>
    <string name="vision_head">OUR VISION</string>
    <string name="motivation_head">OUR MOTIVATION</string>
    <string name="app_head">POLEMY</string>
    <string name="disclaimer">Disclaimer:The advice provided in this application is strictly only for informational purposes. Always seek a medical professional\'s advise to alleviate severe pollen allergy or asthma symptoms</string>
    <string name="vision_desc">Our vision is to help build resilience among our communities in Victoria that are adapting to the health impacts of climate change.</string>
    <string name="motivation_desc">Rhinitis or Hay Fever is one of the most prevalent allergic diseases in Australia which affects almost 15% of its population.This can be caused due to dust particles, pollen, air pollutants, animal fur etc. The alarming rate, at which climate change has increased, has caused Earth’s temperature to rise which has a direct effect on air quality.Elevated levels of greenhouse gases have tampered flowering seasons, pollen production and pollen dispersion. Researchers estimate that pollen counts are going to double by the 2040 and allergies are going to get way worse.In Australia, Canberra and Melbourne face high rates of asthma, rhinitis and various other allergic diseases which make them the most vulnerable to climate changes.</string>
    <string name="app_desc">Our proposed application ‘Polemy’ provides users with an understanding of how current weather can elevate pollen allergy, asthma and other respiratory disease symptoms. It also provides users with information about pollen spewing plants in their vicinity further helping them avoid such regions or to take caution. Our application also helps users understand the simple preventive measures that can be applied to manage allergic or asthmatic symptoms. Polemy is developed to help a target audience between the ages 25 to 50 years help manage airborne allergies as a result of climate change.</string>
    <string name="menu_preventive_measures">Simple Preventive Measures</string>
    <string name="pm_desc1">Monitoring public announcements of air quality and by remaining indoors during high pollution episodes.</string>
    <string name="pm_desc2">Levels of air pollution in the home can be reduced by adequate ventilation.</string>
    <string name="pm_desc3">Carry your inhalation device such as the press-and-breathe pressurised metered dose inhaler (MDI).</string>
    <string name="pm_desc4">Engage in activities that protect and promote health; ex: participate in a regular exercise program. </string>
    <string name="pm_desc5">Monitor and manage symptoms and signs of illness; ex: monitor shortness of breath or sputum colour, visit a physician sooner rather than later. </string>
    <string name="pm_desc6">Adhere to treatment regimens.</string>
    <string name="menu_climate_change">Climate Change &amp; Airborne Allergies</string>
    <string name="menu_polemy">Polemy</string>
    <string name="initial_number">0</string>
    <string name="pollen_count">Pollen Index</string>
    <string name="Celsius_symbol">°C</string>
    <string name="humidity">Humidity</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="airQuality">Air Quality</string>
    <string name="windSpeed_unit">KmPH</string>
    <!--
    <string name="google_maps_key">AIzaSyDc1C-k1wjKB-MeN9_ZtzFEuyuNiZLHGt8</string>
    -->
    <string name="google_maps_key">AIzaSyAKfWt6c1K1ceh10hCT5drYWVkqsD_YrYA</string>
    <string name="menu_maps">Maps</string>
    <string name="search_icon">Search_Icon</string>
    <string name="temperature">Temperature</string>
    <string name="explore_more">Click here to view to view various symptoms of airborne allergies and asthma along with simple preventive measure.</string>
    <string name="percentage">%</string>
    <string name="know_more">Know more</string>
    <string name="plant">Plant</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="information">Information</string>
    <string name="symptoms" />
    <string  name= "t_note1">Very Cold!!!\n Stay Indoors, Stay Warm </string>
    <string  name= "t_note2">Cool…\n Cover yourself when going out</string>
    <string  name= "t_note3">Mild :)\n Lovely weather to go outside</string>
    <string  name= "t_note4">Hot!\n Sunscreen Please and Drink lots of Water</string>
    <string  name= "t_note5">Extremely Hot!!!\n Extremely Hot!!!</string>
    <string  name= "aq_note1">Very Good\n No Health Impacts. Enjoy your day! </string>
    <string  name= "aq_note2">Good\n Traces of particulate matter might cause discomfort for extremely sensitive people.</string>
    <string  name= "aq_note3">Fair\n Carry Inhaler/Medication, Limit Physical Activities</string>
    <string  name= "aq_note4">Poor\n Carry Inhaler/Medication, Limit Physical Activities to Early Hours of the Day</string>
    <string  name= "aq_note5">Very Poor\n Do not Exercise. Follow Asthma Action Plan</string>
    <string  name= "pollen_note1">Low\n No Health Impacts!</string>
    <string  name= "pollen_note2">Moderate\n Take preventive measures</string>
    <string  name= "pollen_note3">High\n Cover nose and mouth. Carry prescribed medications. Try to avoid going out.</string>
    <string  name= "h_note1">Low Humidity\n Comfortable Breathing:)</string>
    <string  name= "h_note2">Humid\n Carry Inhaler/Medication, Minimal Exercise Please!</string>
    <string  name= "h_note3">Too Humid!!\n Stay Indoors. Do not Exercise and follow your \'Asthma Action Plan\'.</string>
    <string  name= "ws1">Calm\n No Health Impacts. Be cautious of smoke!</string>
    <string  name= "ws2">Light Air\n  Smoke drifts slowly</string>
    <string  name= "ws3">Slight Breeze\n Good Wind Condition</string>
    <string  name= "ws4">Gentle Breeze\n Leaves and small twigs in constant motion. Moderate Pollen.</string>
    <string  name= "ws5">Moderate Wind\n More pollen and dust in the air. Cover nose and mouth.</string>
    <string  name= "ws6">Fresh Wind\n High pollen and particulate matter. Cover nose and mouth.</string>
    <string  name= "ws7">Strong Wind\n Stay Indoors</string>
</resources>