<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/climateChange">
    <fragment
        android:id="@+id/about"
        android:name="com.e.polemyiteration1.About"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/contactUs"
        android:name="com.e.polemyiteration1.PreventiveMeasures"
        android:label="@string/menu_preventive_measures"
        tools:layout="@layout/fragment_preventive_measures" />
    <fragment
        android:id="@+id/climateChange"
        android:name="com.e.polemyiteration1.ClimateChange"
        android:label="@string/menu_polemy"
        tools:layout="@layout/fragment_climate_change" />
    <fragment
        android:id="@+id/pollenPlants"
        android:name="com.e.polemyiteration1.PollenPlants"
        android:label="@string/menu_pollen_plants"
        tools:layout="@layout/fragment_pollen_plants" />
    <fragment
        android:id="@+id/maps"
        android:name="com.e.polemyiteration1.MapsFragment"
        android:label="@string/menu_maps"
        tools:layout="@layout/fragment_maps" />

</navigation>