<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom"
        android:title="@string/home" />
    <item
        android:id="@+id/plant"
        android:enabled="true"
        android:icon="@drawable/plant_icon"
        app:showAsAction="ifRoom"
        android:title="@string/plant" />
    <item
        android:id="@+id/plant_map"
        android:enabled="true"
        android:icon="@drawable/map"
        app:showAsAction="ifRoom"
        android:title="@string/map" />
    <item
        android:id="@+id/info"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/information_icon"
        android:title="@string/information" />
</menu>