<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pm_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".PreventiveMeasure">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />
    <TextView
        android:id="@+id/spm_tv"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/menu_preventive_measures"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/gl_1"
        app:layout_constraintEnd_toEndOf="@id/gl_2"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pm1"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/pmv_bg1"
        android:text="@string/pm_desc1"
        app:layout_constraintTop_toBottomOf="@id/spm_tv"
        app:layout_constraintStart_toStartOf="@id/gl_1"
        app:layout_constraintEnd_toEndOf="@id/gl_2">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/tv"
                android:tint="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:text="@string/pm_desc1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pm2"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/pmv_bg2"
        android:text="@string/pm_desc1"
        app:layout_constraintTop_toBottomOf="@id/pm1"
        app:layout_constraintStart_toStartOf="@id/gl_1"
        app:layout_constraintEnd_toEndOf="@id/gl_2">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="11dp"
                android:src="@drawable/fan"
                android:tint="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:text="@string/pm_desc2"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pm3"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/pmv_bg3"
        android:text="@string/pm_desc1"
        app:layout_constraintTop_toBottomOf="@id/pm2"
        app:layout_constraintStart_toStartOf="@id/gl_1"
        app:layout_constraintEnd_toEndOf="@id/gl_2">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/inhaler"
                android:tint="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:text="@string/pm_desc3"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pm4"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/pmv_bg4"
        android:text="@string/pm_desc1"
        app:layout_constraintTop_toBottomOf="@id/pm3"
        app:layout_constraintStart_toStartOf="@id/gl_1"
        app:layout_constraintEnd_toEndOf="@id/gl_2">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="11dp"
                android:src="@drawable/running"
                android:tint="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:text="@string/pm_desc4"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pm5"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/pmv_bg5"
        android:text="@string/pm_desc1"
        app:layout_constraintTop_toBottomOf="@id/pm4"
        app:layout_constraintStart_toStartOf="@id/gl_1"
        app:layout_constraintEnd_toEndOf="@id/gl_2">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/doctor"
                android:tint="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:text="@string/pm_desc5"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pm6"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_marginTop="3dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/pmv_bg3"
        android:text="@string/pm_desc1"
        app:layout_constraintTop_toBottomOf="@id/pm5"
        app:layout_constraintStart_toStartOf="@id/gl_1"
        app:layout_constraintEnd_toEndOf="@id/gl_2">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/circle_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginStart="17dp"
                android:src="@drawable/notebook"
                android:tint="@color/white"/>
        </LinearLayout>
        <TextView
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:textStyle="bold"
            android:text="@string/pm_desc6"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>